--- a/src/components/organisms/MovieGrid/MovieGrid.module.css
+++ b/src/components/organisms/MovieGrid/MovieGrid.module.css
@@ -1,7 +1,7 @@
 /* src/components/organisms/MovieGrid/MovieGrid.module.css */
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Ajuste minmax para o tamanho desejado do card */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px 0;
 }
